exports[`PicklistReducer Refresh node: fail action 1`] = `
Object {
  "NODE": Array [],
  "OBJECT": Array [],
  "error": [Error: Some error occurred to load node path.]
}
`;

exports[`PicklistReducer Refresh node: initial action 1`] = `
Object {
  "NODE": Array [],
  "OBJECT": Array []
}
`;

exports[`PicklistReducer Refresh node: no action 1`] = `
Object {
  "NODE": Array [],
  "OBJECT": Array []
}
`;

exports[`PicklistReducer Refresh node: success action 1`] = `
Object {
  "NODE": Array [],
  "OBJECT": Array []
}
`;

exports[`PicklistReducer Refresh object: fail action 1`] = `
Object {
  "NODE": Array [],
  "OBJECT": Array [],
  "error": [Error: Some error occurred to load object path.]
}
`;

exports[`PicklistReducer Refresh object: initial action 1`] = `
Object {
  "NODE": Array [],
  "OBJECT": Array []
}
`;

exports[`PicklistReducer Refresh object: no action 1`] = `
Object {
  "NODE": Array [],
  "OBJECT": Array []
}
`;

exports[`PicklistReducer Refresh object: success action 1`] = `
Object {
  "NODE": Array [],
  "OBJECT": Array []
}
`;

exports[`PicklistReducer invokes LOAD_ONE_NODE_SUCCESS when node path is loaded. 1`] = `
Array [
  Object {
    "id": 3,
    "type": "musit/picklist/LOAD_ONE_NODE"
  },
  Object {
    "id": 3,
    "result": Object {
      "id": 3,
      "isPartOf": 2,
      "name": "Forskningens hus",
      "path": ",1,2,3,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        },
        Object {
          "name": "Forskningens hus",
          "nodeId": 3
        }
      ],
      "type": "Building"
    },
    "type": "musit/picklist/LOAD_ONE_NODE_SUCCESS"
  }
]
`;

exports[`PicklistReducer invokes LOAD_ONE_OBJECT_SUCCESS when object path is loaded. 1`] = `
Array [
  Object {
    "id": 1,
    "type": "musit/picklist/LOAD_ONE_OBJECT"
  },
  Object {
    "id": 1,
    "result": Object {
      "id": 3,
      "isPartOf": 2,
      "name": "Forskningens hus",
      "path": ",1,2,3,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        },
        Object {
          "name": "Forskningens hus",
          "nodeId": 3
        }
      ],
      "type": "Building"
    },
    "type": "musit/picklist/LOAD_ONE_OBJECT_SUCCESS"
  }
]
`;
